--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -28,6 +28,7 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .search-bar {
@@ -75,9 +76,33 @@ body {
    
     .cards-container {
       grid-template-columns: 1fr; 
+      justify-content: center;
     }
 
     .filter-container {
-    
+      display: flex;
+      justify-content: center;
     }
+    
+    .filter {
+      display: block;
+      align-items: center;
+      
+    }
+
+    .header {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .search-bar {
+      order: 2;
+      margin-top: 10px;
+    }
+  
+    .cart-button {
+      order: 1;
+      margin-bottom: 10px;
+    }
+
   }
